<resources>
  <string name="app_name">Garaponoid</string>
  <string name="garapon_tv_account">Garapon TV Account</string>
  <string name="action_search">Search programs</string>
  <string name="action_refresh">Refresh</string>
  <string name="action_preferences">Preferences</string>
  <string name="sign_in">Sign in</string>
  <string name="sign_in_to_garapon_tv">Sign in to Garapon TV</string>
  <string name="sign_out">Sign out</string>
  <string name="search_hint">Search programs</string>
  <string name="unknown_user">Unknown user</string>
  <string name="wrong_password">Wrong password</string>
  <string name="confirm_sign_out">Sign out ?</string>
  <string name="version">Version</string>
  <string name="about">About</string>
  <string name="unknown">unknown</string>
  <string name="default_version_code">(0)</string>
  <string name="open_source_license"><![CDATA[<u>Open Source License</u>]]></string>
  <string name="new_programs">New programs</string>
  <string name="see_more">See more</string>
  <string name="program_list">Program List</string>
  <string name="unknown_datetime">(datetime)</string>
  <string name="unknown_duration">(duration)</string>
  <string name="unknown_channel">(channel)</string>
  <string name="pref_video_viewer">Video Viewer</string>
  <string name="pref_video_viewer_summary">How to open program videos</string>
  <string name="pref_video_viewer_hls">HLS (HTTP Live Streaming)</string>
  <string name="pref_video_viewer_rtmp">RTMP (Real Time Messaging Protocol)</string>
  <string name="pref_video_viewer_webviewer">Flash (Open in web browser)</string>
  <string name="connection_failure">Make sure that the following URL is available:\n%s</string>
</resources>
