<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView"
  />

  <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="ifRoom"
  />

  <item android:id="@+id/action_settings"
        android:title="@string/action_preferences"
        android:showAsAction="never"
  />

  <item android:id="@+id/action_about"
        android:title="@string/about"
        android:showAsAction="never"
  />
</menu>
