<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/about_view"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
>
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
  >
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:padding="20dp"
      android:src="@drawable/tv"
      />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      >
      <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />
      <TextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/unknown"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />
      <TextView
        android:id="@+id/version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/default_version_code"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />
    </LinearLayout>
  </LinearLayout>

  <FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="2dp"
    android:background="@android:color/darker_gray"
    android:layout_margin="30dp"
  />

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
  >
    <TextView
      android:id="@+id/license"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@android:style/TextAppearance.Medium"
      android:text="@string/open_source_license"
    />
  </LinearLayout>
</LinearLayout>
